# Calculator

./: Aggregate.hs  BigList.hs  BigMatrix.hs  BigScalar.hs  BigVector.hs  Calculator.cabal  Files.hs  Imaginary.hs  LICENSE  Main.hs  MathEntity.hs  MathInfo.hs  NumberList.hs  Operations.hs  README.md  Scalar.hs  Settings.hs  Vector.hs  hie.yaml  package.yaml  stack.yaml
Calc-Library/calc/: Matrix.py  Vector.py
Calculator/calc/: Complex.py  _MultiplicationMediator.py
PythonCalculator/calc/: Complex.py  EqualityMediator.py  Function.py  MathConstant.py  MathEntity.py  Matrix.py  NumberList.py  Quaternion.py  Vector.py  _AdditionMediator.py  _DivisionMediator.py  _EqualityMediator.py  _ExponentiationMediator.py  _MultiplicationMediator.py  _SubtractionMediator.py  __init__.py
PythonCalculator/config/: vars.json
PythonCalculator/parse/: AssignmentMap.py  Parse.py  __init__.py
app/: Main.hs
calc/: MathEntity.py  NumberList.py  Quaternion.py  _AdditionMediator.py  _DivisionMediator.py  _EqualityMediator.py  _ExponentiationMediator.py  _SubtractionMediator.py
data/: const.json  settings.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Actions.hs  BigList.hs  BigMatrix.hs  BigNumber.hs  BigScalar.hs  BigSet.hs  BigTensor.hs  BigTuple.hs  BigVector.hs  CalcSettings.hs  Debug.hs  Equality.hs  Indexable.hs  MathEntity.hs  MathInfo.hs  Parse.hs  Stringify.hs  Underlying.hs
