cabal-version: 2.4
-- For further documentation, see
-- http://haskell.org/cabal/users-guide/

name: Calculator
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license: NONE
license-file: LICENSE
author: AHorejsi
maintainer: alex.horejsi59@gmail.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Calculator
  main-is: Main.hs
  other-modules:
    MathInfo,
    Scalar,
    Vector
  -- other-extensions:
  build-depends: 
    base ^>=4.14.1.0,
    unordered-containers ^>=0.2.15.0,
    hashable ^>=1.4.0.1,
    vector ^>=0.12.3.1,
    numbers ^>=3000.2.0.2
  -- hs-source-dirs:
  default-language: Haskell2010
